Updated parameter combination table and removed cell outputs

--- a/ML/3.Feature Selection.ipynb
+++ b/ML/3.Feature Selection.ipynb
@@ -106,8 +106,8 @@
     "print('Selected features:', sel_f)\n",
     "\n",
     "feat_dic = pickle.load(open('Results/selected_features.pkl', 'rb'))\n",
-    "feat_dic['Kingdom']['Chemical entities'] = {'MDI': {'importances': importances, 'std': std, 'selected features':sel_f}, \n",
-    "                                      'correlation (to drop)': to_drop, 'selected features': sel_f}\n",
+    "feat_dic['Kingdom'] = {'Chemical entities': {'MDI': {'importances': importances, 'std': std, 'selected features':mdi_f}, \n",
+    "                                      'correlation (to drop)': to_drop, 'selected features': sel_f}}\n",
     "pickle.dump(feat_dic, open('Results/selected_features.pkl', 'wb'))"
    ]
   },
@@ -189,7 +189,7 @@
     "    print('Selected features:', sel_f)\n",
     "    \n",
     "    feat_dic = pickle.load(open('Results/selected_features.pkl', 'rb'))\n",
-    "    feat_dic['Superclass'][king] = {'MDI': {'importances': importances, 'std': std, 'selected features':sel_f}, \n",
+    "    feat_dic['Superclass'][king] = {'MDI': {'importances': importances, 'std': std, 'selected features':mdi_f}, \n",
     "                                      'correlation (to drop)': to_drop, 'selected features': sel_f}\n",
     "    pickle.dump(feat_dic, open('Results/selected_features.pkl', 'wb'))"
    ]
@@ -277,7 +277,7 @@
     "        print('Selected features:', sel_f)\n",
     "\n",
     "        feat_dic = pickle.load(open('Results/selected_features.pkl', 'rb'))\n",
-    "        feat_dic['Superclass_binary'][sclass] = {'MDI': {'importances': importances, 'std': std, 'selected features':sel_f}, \n",
+    "        feat_dic['Superclass_binary'][sclass] = {'MDI': {'importances': importances, 'std': std, 'selected features':mdi_f}, \n",
     "                                          'correlation (to drop)': to_drop, 'selected features': sel_f}\n",
     "        pickle.dump(feat_dic, open('Results/selected_features.pkl', 'wb'))"
    ]
@@ -326,7 +326,7 @@
    "outputs": [],
    "source": [
     "sclasses = np.unique(y_train[:,1])\n",
-    "for i, sclass in enumerate(sclass):\n",
+    "for i, sclass in enumerate(sclasses):\n",
     "    if sclass in sc_u:\n",
     "        continue\n",
     "    print(i, sclass)"
@@ -368,7 +368,7 @@
     "    print('Selected features:', sel_f, '\\n')\n",
     "    \n",
     "    feat_dic = pickle.load(open('Results/selected_features.pkl', 'rb'))\n",
-    "    feat_dic['Class'][sclass] = {'MDI': {'importances': importances, 'std': std, 'selected features':sel_f}, \n",
+    "    feat_dic['Class'][sclass] = {'MDI': {'importances': importances, 'std': std, 'selected features':mdi_f}, \n",
     "                                      'correlation (to drop)': to_drop, 'selected features': sel_f}\n",
     "    pickle.dump(feat_dic, open('Results/selected_features.pkl', 'wb'))"
    ]
@@ -417,7 +417,7 @@
    "source": [
     "classes = np.unique(y_train[:,2])\n",
     "for i, class_ in enumerate(classes):\n",
-    "    if class_ in s_u:\n",
+    "    if class_ in c_u:\n",
     "        continue\n",
     "    print(i, class_)"
    ]
@@ -434,7 +434,7 @@
     "pickle.dump(feat_dic, open('Results/selected_features.pkl', 'wb'))\n",
     "\n",
     "for i, class_ in enumerate(classes):\n",
-    "    if class_ in s_u:\n",
+    "    if class_ in c_u:\n",
     "        continue\n",
     "    print(i, class_)\n",
     "    \n",
@@ -458,7 +458,7 @@
     "    print('Selected features:', sel_f, '\\n')\n",
     "    \n",
     "    feat_dic = pickle.load(open('Results/selected_features.pkl', 'rb'))\n",
-    "    feat_dic['Subclass'][class_] = {'MDI': {'importances': importances, 'std': std, 'selected features':sel_f}, \n",
+    "    feat_dic['Subclass'][class_] = {'MDI': {'importances': importances, 'std': std, 'selected features':mdi_f}, \n",
     "                                      'correlation (to drop)': to_drop, 'selected features': sel_f}\n",
     "    pickle.dump(feat_dic, open('Results/selected_features.pkl', 'wb'))"
    ]
@@ -472,7 +472,7 @@
    "source": [
     "%matplotlib inline\n",
     "for i, class_ in enumerate(classes):\n",
-    "    if class_ in s_u:\n",
+    "    if class_ in c_u:\n",
     "        continue\n",
     "    feat_dic = pickle.load(open('Results/selected_features.pkl', 'rb'))\n",
     "    importances = feat_dic['Subclass'][class_]['MDI']['importances']\n",
@@ -652,14 +652,14 @@
    "outputs": [],
    "source": [
     "feat_dic = pickle.load(open('Results/selected_features.pkl', 'rb'))\n",
-    "txt = ''\n",
+    "df = []\n",
     "for key1, value1 in feat_dic.items():\n",
-    "    txt += key1 + '\\n'\n",
+    "    if key1 == 'Superclass_binary':\n",
+    "        key1 = 'Superclass (binary classifiers)'\n",
     "    for key2, value2 in value1.items():\n",
-    "        txt += key2 + \"\\t\" + \", \".join(value2['MDI']['selected features']) + '\\n'\n",
-    "\n",
-    "with open('selected_features.txt', 'w') as f:\n",
-    "    f.write(txt)"
+    "        df.append({'Level':key1, 'Node':key2, 'Selected features': \", \".join(value2['selected features'])})\n",
+    "df = pd.DataFrame(df)\n",
+    "df.to_csv('Results/Selected_features.csv')"
    ]
   },
   {
@@ -673,12 +673,84 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a8e1fdb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feat_dic = pickle.load(open('Results/selected_features.pkl', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b1bd76b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key, value in feat_dic.items():\n",
+    "    for key2, value2 in value.items():\n",
+    "        if len(value2['correlation (to drop)']) != 3:\n",
+    "            print(key2)\n",
+    "            print(value2['MDI']['selected features'])\n",
+    "            print(value2['selected features'])\n",
+    "            print(value2['correlation (to drop)'])\n",
+    "            print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b95d53c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(20, 20), dpi=800)\n",
+    "%matplotlib inline\n",
+    "fig, ax = plt.subplots(figsize=(20, 10), dpi=800)\n",
     "ax.plot(X_train[:, 4], X_train[:, -3], 'bo')\n",
+    "ax.set_xlabel('N/C')\n",
+    "ax.set_ylabel('Nitrogen')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bb1326e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(20, 20), dpi=800)\n",
+    "ax.plot(X_train[:, 0], X_train[:, 1], 'bo')\n",
+    "ax.set_xlabel('Carbon')\n",
+    "ax.set_ylabel('Hydrogen')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b910f0bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(20, 20), dpi=800)\n",
+    "ax.plot(X_train[:, -15], X_train[:, 0], 'bo')\n",
+    "ax.set_xlabel('Mass')\n",
+    "ax.set_ylabel('Carbon')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "851e8b64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(20, 20), dpi=800)\n",
+    "ax.plot(X_train[:, -15], X_train[:, 1], 'bo')\n",
+    "ax.set_xlabel('Mass')\n",
+    "ax.set_ylabel('Hydrogen')\n",
     "plt.show()"
    ]
   }
