--- a/ML/6.Hierarchical_models_Superclass_lvl.ipynb
+++ b/ML/6.Hierarchical_models_Superclass_lvl.ipynb
@@ -788,7 +788,7 @@
     "    scores_df.extend(scores_rows)\n",
     "    params_df.append(params_row)    \n",
     "scores_df = pd.DataFrame(scores_df).set_index(['Classifier', 'Feature selection', 'F1-score average'])\n",
-    "params_df = pd.DataFrame(params_df).set_index(['Classifier'])"
+    "params_df = pd.DataFrame(params_df)"
    ]
   },
   {
@@ -806,13 +806,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22e5819e",
+   "id": "dd9cc8cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with pd.ExcelWriter('Results/GS_best_comb_params.xlsx', mode='a') as writer:  \n",
-    "    params_df.to_excel(writer, sheet_name='Superclass')\n",
-    "params_df"
+    "params_df['Level'] = 'Superclass'\n",
+    "pd.concat([pd.read_pickle('Results/GS_best_comb_params.pkl'), params_df]).to_pickle('Results/GS_best_comb_params.pkl')"
    ]
   }
  ],
