Fixed import error after removing an unused aux function

--- a/ML/10.Classifier_Selection&Prediction.ipynb
+++ b/ML/10.Classifier_Selection&Prediction.ipynb
@@ -21,7 +21,7 @@
     "from sklearn.metrics import accuracy_score,  f1_score, precision_score, classification_report, balanced_accuracy_score, confusion_matrix\n",
     "import seaborn as sns\n",
     "from aux_functions.name_2lines import name_2lines\n",
-    "from aux_functions.make_plots import boxplot_from_report, plot_confusion_matrix, OOMFormatter\n",
+    "from aux_functions.make_plots import plot_confusion_matrix, OOMFormatter\n",
     "from aux_functions.prediction import get_class_w_prob\n",
     "from itertools import product\n",
     "import pickle\n",
